--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,71 +1,154 @@
 html,
 body {
-  height: 100%;
+	height: 100%;
 }
 
 body {
-  font-size: 1rem;
+	font-size: 1rem;
 }
 
 .text-avatar {
-  width: 30px;
-  height: 30px;
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 30px;
-  text-transform: "capitalize";
+	width: 30px;
+	height: 30px;
+	font-size: 15px;
+	font-weight: 500;
+	line-height: 30px;
+	text-transform: "capitalize";
 }
 
 .breadcrumb {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .alert {
-  border: none;
-  border-radius: 0;
+	border: none;
+	border-radius: 0;
 }
 
 .sidebar {
-  .open {
-    .nav-link {
-      &:hover {
-        color: $white;
-      }
-    }
-  }
+	.open {
+		.nav-link {
+			&:hover {
+				color: $white;
+			}
+		}
+	}
 
-  .sidebar-minimizer {
-    border-top: 1px solid #c8ced3;
-  }
+	.sidebar-minimizer {
+		border-top: 1px solid #c8ced3;
+	}
 }
 
 .mh-page {
-  height: calc(100vh - 105px);
-  overflow: hidden;
-  position: relative;
+	height: calc(100vh - 105px);
+	overflow: hidden;
+	position: relative;
 
-  .mh-content, .mh-sidebar {
-    max-height: calc(100vh - 155px);
-    overflow: auto;
-  }
+	.mh-content,
+	.mh-sidebar {
+		max-height: calc(100vh - 155px);
+		overflow: auto;
+	}
 }
 
 .app-header {
-  .navbar-brand {
-    width: 200px;
-  }
+	.navbar-brand {
+		width: 200px;
+	}
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+	width: 5px;
 }
 
 ::-webkit-scrollbar-track {
-  background: $light;
-  border-radius: 10px;
+	background: $light;
+	border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: $secondary;
-  border-radius: 10px;
+	background: $secondary;
+	border-radius: 10px;
+}
+
+.image-picker {
+	width: 100%;
+
+	.responsive {
+		position: relative;
+		margin: 0 6px;
+		float: left;
+		opacity: 1;
+
+		.thumbnail {
+			border: 1px solid #ddd; /* Gray border */
+			border-radius: 4px; /* Rounded border */
+			padding: 5px; /* Some padding */
+			width: 150px; /* Set a small width */
+			opacity: 1;
+			margin: 0;
+
+			&:hover {
+				box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.7);
+			}
+		}
+
+		.selected {
+			background-color: rgba(0, 140, 186, 1);
+		}
+
+		&:hover {
+			cursor: pointer;
+		}
+
+		.checked {
+			display: none;
+		}
+	}
+
+	.selected {
+		opacity: 0.7;
+
+		.checked {
+			display: inline-block;
+			transition: 0.5s ease;
+			position: absolute;
+			bottom: 0;
+			right: 0;
+
+			.icon {
+				background: url("../assets/img/check.png");
+				background-size: cover;
+				height: 75px;
+				width: 75px;
+			}
+		}
+	}
+
+	.clear-both {
+		clear: both;
+	}
+}
+
+.draggable-box {
+	border: 1px solid;
+	border-radius: 5px;
+	color: #fff;
+	width: 150px;
+	height: 150px;
+	margin: 10px;
+
+	img {
+		width: 150px;
+		height: 150px;
+	}
+}
+
+.favorite-gallery-img {
+	border: 1px solid !important;
+	border-radius: 5px;
+	color: #fff;
+	width: 300px;
+	height: 300px;
+	margin: 30px;
 }
